--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 <div class="subheading mb-5">Feel free to shoot me an email 
                 <a href="mailto:jujbates@gmail.com?Subject=###Hello%20Justin%20Bates###" target="_top">jujbates@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                <p class="lead mb-5">Creative, detail-oriented, and​ motivated to help you understand your business data with comprehensive reports that are done in a timely manner. Well rounded analytical skill from a Bachelor’s in Computer Engineering and a Udacity Deep Learning Nanodegree.</p>
+
+                
                 <div class="social-icons">
                     <a href="https://github.com/jujbates">
                         <i class="fab fa-github"></i>
@@ -82,6 +84,9 @@
                     </a>
                     <a href="https://www.facebook.com/jujbates">
                         <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://github.com/jujbates/justinbatesresume2020.pdf">
+                        <i class="far fa-file"></i>
                     </a>
                 </div>
             </section>
