added 2020 resume pdf

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="https://www.facebook.com/jujbates">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://github.com/jujbates/justinbatesresume2020.pdf">
+                    <a href="https://jujbates.github.io/JustinBatesResume2020.pdf">
                         <i class="far fa-file"></i>
                     </a>
                 </div>
