small fix on experiences.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <h3 class="mb-0">Boys Program Director, Head Caoch</h3>
                             <div class="subheading mb-3">Main Beach Volleyball Club, Santa Sruz, CA</div>
                             <p>• Created opportunities for student-athletes to improve their technique, communication, collaboration, and time management skills.</p>
-                            <p>• Organized and managed the boys program including player development, coaching staff, advertising the season to parents and community.</p>
+                            <p>• Organized and managed the boys program including player development, coaching staff, and advertising.</p>
                         </div>
                         <div class="resume-date text-md-right">
                             <span class="text-primary">December 2016 - Present</span>
