--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                             <p>• Developed a beer recommendation engine with collaborative filtering techniques, namely K Nearest Neighbors and Singular Value Decomposition.</p>
                             <p>• Achieved low error rates (RMSE: 0.1317, MAE: 0.0547) with KNN model through 5-fold cross-validation, demonstrating effectiveness in predicting beer preferences.</p>
                             <p>• Leveraged the combined power of KNN and SVD to provide more relevant recommendations, indicating potential for improved user satisfaction and exploration of diverse beer options.</p>
-                            <h3 class="mb-0">Report: <a href="https://github.com/jujbates/Beer-Recommendation-System">https://github.com/jujbates/Beer-Recommendation-System</a></h3>
-                            <h3 class="mb-0">Presentation: <a href="https://github.com/jujbates/Beer-Recommendation-System">https://github.com/jujbates/Beer-Recommendation-System</a></h3>
+                            <h5 class="mb-0">Report: <a href="https://github.com/jujbates/Beer-Recommendation-System/blob/main/reports/Beer%20Recommendation%20Engine%20Project%20Report.pdf">Beer_Recommendation_Engine_Project_Report.pdf</a></h5>
+                            <h5 class="mb-0">Presentation: <a href="https://github.com/jujbates/Beer-Recommendation-System/blob/main/reports/Beer%20Recommendation%20Engine%20Presentation%20Report.pdf">Beer_Recommendation_Engine_Presentation_Report.pdf</a></h5>
 
                         </div>
                     </div>
@@ -130,8 +130,8 @@
                             <p>• Designed an optimized portfolio aimed to maximize sharpe ratio, outpacing S&P 500 by over 10% in cumulative return with 2-year data analysis.</p>
                             <p>• Utilized web scraping and data preprocessing techniques to gather adjusted close prices of S&P 500 companies for portfolio optimization.</p>
                             <p>• Implemented bootstrap and Gibbs sampling methods to evaluate portfolio performance, achieving a significant increase in return.</p>
-                            <h3 class="mb-0">Report: <a href="https://github.com/jujbates/Beer-Recommendation-System">https://github.com/jujbates/Beer-Recommendation-System</a></h3>
-                            <h3 class="mb-0">Presentation: <a href="https://github.com/jujbates/Beer-Recommendation-System">https://github.com/jujbates/Beer-Recommendation-System</a></h3>
+                            <h5 class="mb-0">Report: <a href="https://github.com/jujbates/Portfolio-Optimization/blob/main/portopt/reports/S%26P_Portfolio_Optimization_Report.pdf">S&P_Portfolio_Optimization_Report.pdf</a></h5>
+                            <h5 class="mb-0">Presentation: <a href="https://github.com/jujbates/Portfolio-Optimization/blob/main/portopt/reports/S%26P_Portfolio_Optimization_Presentation.pdf">S&P_Portfolio_Optimization_Presentation.pdf</a></h5>
                         </div>
                     </div>
 
@@ -143,8 +143,8 @@
                             </div>
                             <p>• Using data analysis and predictive modeling, the project recommends a weekend ticket price increase to $86 and extending the season to 130 days to achieve the desired profit margin.</p>
                             <p>• Leveraged the combined power of KNN and SVD to provide more relevant recommendations, indicating potential for improved user satisfaction and exploration of diverse beer options..</p>
-                            <h3 class="mb-0">Report: <a href="https://github.com/jujbates/Beer-Recommendation-System">https://github.com/jujbates/Beer-Recommendation-System</a></h3>
-                            <h3 class="mb-0">Presentation: <a href="https://github.com/jujbates/Beer-Recommendation-System">https://github.com/jujbates/Beer-Recommendation-System</a></h3>
+                            <h5 class="mb-0">Report: <a href="https://github.com/jujbates/Big-Mountain-Resort/blob/master/reports/Whitefish_Mountain_Resort_Project_Report.pdf">Whitefish_Mountain_Resort_Project_Report.pdf</a></h5>
+                            <h5 class="mb-0">Presentation: <a href="https://github.com/jujbates/Big-Mountain-Resort/blob/master/reports/Whitefish_Mountain_Resort_Presentation.pdf">Whitefish_Mountain_Resort_Presentation.pdf</a></h5>
                         </div>
                     </div>
 
